--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <a href="https://www.youtube.com/@senthilvignesh8889?app=desktop&fbclid=PAZXh0bgNhZW0CMTEAAaZ0CU_Y0_gI1sVBqRmmUqjveqJ52EwB0djV0UTH4di9R_-iEKxChHlbncE_aem_JmgOvyAiBB9bnCdJgBiJWw"><i class="fa-brands fa-telegram"></i></a>
                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.instagram.com/its_senthil_vignesh_k/?igsh=bnFneGpibHhnMTJ2"><i class="fa-brands fa-instagram"></i></a>
-                <!-- <a href="#"> <i class="fa-regular fa-envelope"></i></a> -->
+                <a href="#"> <i class="fa-regular fa-envelope"></i></a>
             </div>
         </div>
      </footer>
