--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h4>Hello<br> MySelf <strong>SENTHIL VEGNESH</strong></h4>
           <h1>I Am a<span class="speedtyping"></span> </h1>
           <p>I'm passionate about video editing and storytelling.
-             With [X] years of experience, I specialize in [mention specific skills like color grading, motion graphics, etc.].
+             With two years of experience, I specialize in [mention specific skills like color grading, motion graphics, etc.].
              Whether it's commercials, short films, or music videos, I bring creativity and technical expertise to every project.</p>
           <!-- <div class="home-button">
            <a href="">More About Me</a>
@@ -54,7 +54,7 @@
             <div class="about">
                 <h1>About Me</h1>
                 <h4>I'm Senthal Vignesh And<span class="about1">Freelance Video Aditor</span></h4>
-                <p>Welcome to my portfolio! With over [X] years of experience in video editing, I specialize in crafting compelling visual stories that resonate with audiences.
+                <p>Welcome to my portfolio! With over two years of experience in video editing, I specialize in crafting compelling visual stories that resonate with audiences.
                      Proficient in industry-leading software like Adobe Premiere Pro, Final Cut Pro, and DaVinci Resolve, I bring a meticulous approach to every project, ensuring seamless editing, captivating visuals, and powerful storytelling. From commercials to documentaries, I collaborate closely with clients to understand their vision and deliver results that exceed expectations.
                      Explore my portfolio to see how I can bring your next video project to life!</p>
             </div>
