--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           <h4>Hello<br> MySelf <strong>SENTHIL VEGNESH</strong></h4>
           <h1>I Am a<span class="speedtyping"></span> </h1>
           <p>I'm passionate about video editing and storytelling.
-             With two years of experience, I specialize in [mention specific skills like color grading, motion graphics, etc.].
-             Whether it's commercials, short films, or music videos, I bring creativity and technical expertise to every project.</p>
+             With two years of experience, I am specialized in social media video editing .
+             Whether it's commercials, reals,Influencers contents or music videos, I bring creativity and technical expertise to every project.</p>
           <!-- <div class="home-button">
            <a href="">More About Me</a>
           </div> -->
