--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     </div>
                     <div class="bio2">
                     <div class="bio">
-                        <p>Phone:<span class="val1">5542215418</span></p>
+                        <p>Phone:<span class="val1">87786 57634</span></p>
  
                     </div>
                     <div class="bio">
-                        <p>Email:<span class="val1">praveen12you@ gmail.com</span></p>
+                        <p>Email:<span class="val1">senthilvignesh71@gmail.com</span></p>
   
                     </div>
                     <div class="bio">
@@ -157,8 +157,8 @@
             <div class="over-services">
                 <h2>Contact</h2>
                 <h4 class="line"></h4>
-                <h3><a href="#">Email:</a></h3>
-                <h3><a href="#">Phone number:</a></h3>
+                <h3><a href="#">Email:senthilvignesh71@gmail.com</a></h3>
+                <h3><a href="#">Phone number:87786 57634</a></h3>
                 
             </div>
             
