--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <h2>Contact</h2>
                 <h4 class="line"></h4>
                 <h3><a href="#">Email:senthilvignesh71@gmail.com</a></h3>
-                <h3><a href="#">Phone number:87786 57634</a></h3>
+                <h3><a href="#">Phone:87786 57634</a></h3>
                 
             </div>
             
