--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="over-services">
                 <h2>Contact</h2>
                 <h4 class="line"></h4>
-                <h3><a href="#">Email:senthilvignesh71@gmail.com</a></h3>
+                <h3><a href="#">Email:<br>senthilvignesh71@gmail.com</a></h3>
                 <h3><a href="#">Phone:87786 57634</a></h3>
                 
             </div>
