--- a/index.html
+++ b/index.html
@@ -119,16 +119,16 @@
         <h1 class="Work">Recent Work</h1>
         <div class="video-block reveals">
             <video controls>
-                <source src="./videos/video3.mp4">
+                <source src="./video/video3.mp4">
             </video>
             <video controls>
-                <source src="./videos/video5.mp4">
+                <source src="./video/video4.mp4">
             </video>
             <video controls>
-                <source src="./videos/video6.mp4">
+                <source src="./video/video6.mp4">
             </video>
             <video controls>
-                <source src="./videos/video4.mp4">
+                <source src="./video/video5.mp4">
             </video>
             <video controls>
                 <source src="./videos/video2.mp4">
