--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <section id="block">
      <div class="container3">
         <h1 class="Work">Recent Work</h1>
-        <div class="video-block reveals">
+        <div class="video-block">
             <video controls>
                 <source src="./video/video3.mp4">
             </video>
