--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
      <div class="container3">
         <h1 class="Work">Recent Work</h1>
         <div class="video-block">
-            <video>
+            <video controls>
                 <source src="./video/video3.mp4">
             </video>
             <video controls>
