--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
         <div class="video-block">
             <video controls>
                 <source src="./video/video3.mp4">
+                <source src="./video/video1.mp4">
+
             </video>
             <video controls>
                 <source src="./video/video4.mp4">
