--- a/index.html
+++ b/index.html
@@ -118,10 +118,8 @@
      <div class="container3">
         <h1 class="Work">Recent Work</h1>
         <div class="video-block">
-            <video controls>
+            <video width="320" height="240" controls>
                 <source src="./video/video3.mp4">
-                <source src="./video/video1.mp4">
-
             </video>
             <video controls>
                 <source src="./video/video4.mp4">
